# flare-discord-bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
bot/: Cargo.toml
bot/src/: main.rs  templates.rs
bot/src/commands/: arithmetic.rs  mod.rs  util.rs
bot/src/wrappers/: ffmpeg_wrapper.rs
command-derive/: Cargo.toml
flare-discord-bot/: Cargo.toml
framework/: Cargo.toml
framework/src/: lib.rs
framework/src/framework/: builder.rs  mod.rs
framework/src/handlers/: message_binder.rs  message_handler.rs  mod.rs
framework/src/structs/: arg_state.rs  command.rs  command_result.rs  mod.rs  prefix.rs  result.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: ast_maker.rs  event_handler.rs  lexer.rs  main.rs  parser.rs
src/ast_maker/: command_tokenizer.rs
