[package]
name = "flare-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
serenity = { version = "0.12", features = ["voice"] }
songbird = { version = "0.4" }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
